--- a/hacker-news/.babelrc
+++ b/hacker-news/.babelrc
@@ -2,11 +2,9 @@
   "presets": ["next/babel"],
   "plugins": [
     [
-      "styled-components",
+      "babel-plugin-styled-components",
       {
-        "ssr": true,
-        "displayName": true,
-        "preprocess": false
+        "ssr": false
       }
     ]
   ]
